Add custom button to Quill
Adds custom button that will be used to restore note content from trash.

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
 html, body, div#root, div#app, div.trashcan, div.row, div.trashcan-container {
   height: 100%;
 }
+
+.quill-custom-button {
+  vertical-align: top;
+}
