Style notebook sidebar

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,11 @@
-html, body, div#root, div#app, div.trashcan, div.row, div.trashcan-container {
+html, body, div#root, div#app, div.trashcan, div.row, div.trashcan-container, div.notebook-container {
   height: 100%;
 }
 
 .quill-custom-button {
   vertical-align: top;
+}
+
+section.notebooks, section.notes {
+  margin-top: 20px;
 }
