Change color of custom buttons inside Quill
Color now matches the color of quill's default buttons.

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ html, body, div#root, div#app, div.trashcan, div.row, div.trashcan-container, di
 
 .quill-custom-button {
   vertical-align: top;
+  color: #444444;
 }
 
 section.notebooks, section.notes {
