--- a/src/components/TrashcanPage/index.css
+++ b/src/components/TrashcanPage/index.css
@@ -60,7 +60,7 @@ span.expand-notebook {
     vertical-align: middle;
 }
 
-div.notebook-name-sidebar:hover {
+div.notebook-name-sidebar:hover, li.list-group-item.sidebar-note.notebook-name-sidebar-active {
     background-color: #1E2230;
     color: #fff;
 }
