Size sidebar on home page to full page size

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,11 @@ section.notebooks, section.notes {
   margin-top: 20px;
 }
 
+.trashcan.main-content, .preview-note-content {
+  display:block;
+  overflow:auto;
+}
+
 /* Notebook page */
 
 .home-icon {
