Show/hide add note input

--- a/src/components/NotebookPage/index.css
+++ b/src/components/NotebookPage/index.css
@@ -37,3 +37,7 @@ span.tag-name:hover {
     color: #fff;
     background-color: #868e96;
 }
+
+.input-group.input-group-sm.hidden {
+    display: none;
+}
