--- a/src/components/NotebookPage/Editor/index.css
+++ b/src/components/NotebookPage/Editor/index.css
@@ -329,5 +329,54 @@
 .ql-font-ubuntu {
     font-family: "Ubuntu";
 }
+
+/* Font Sizes */
+
+#toolbar .ql-size span[data-label="12"]::before {
+    font-size: "12px";
+}
+#toolbar .ql-size span[data-label="14"]::before {
+    font-size: "14px";
+}
+#toolbar .ql-size span[data-label="16"]::before {
+    font-size: "16px";
+}
+#toolbar .ql-size span[data-label="18"]::before {
+    font-size: "18px";
+}
+#toolbar .ql-size span[data-label="20"]::before {
+    font-size: "20px";
+}
+#toolbar .ql-size span[data-label="22"]::before {
+    font-size: "22px";
+}
+#toolbar .ql-size span[data-label="24"]::before {
+    font-size: "24px";
+}
+#toolbar .ql-size span[data-label="26"]::before {
+    font-size: "26px";
+}
+#toolbar .ql-size span[data-label="28"]::before {
+    font-size: "28px";
+}
+#toolbar .ql-size span[data-label="30"]::before {
+    font-size: "30px";
+}
+#toolbar .ql-size span[data-label="32"]::before {
+    font-size: "32px";
+}
+#toolbar .ql-size span[data-label="34"]::before {
+    font-size: "34px";
+}
+#toolbar .ql-size span[data-label="36"]::before {
+    font-size: "36px";
+}
+#toolbar .ql-size span[data-label="48"]::before {
+    font-size: "48px";
+}
+#toolbar .ql-size span[data-label="72"]::before {
+    font-size: "72px";
+}
+
   /* We do not set Aref Ruqaa since it is the default font */
   
