Conditionally hide editor on Notebook page
If there are no notes in a notebook, keep the editor hidden until user creates one.

--- a/src/components/NotebookPage/index.css
+++ b/src/components/NotebookPage/index.css
@@ -38,3 +38,7 @@ span.tag-name:hover {
 .notebook-note-editor {
     padding-top: 22px;
 }
+
+div.notebook-page-editor {
+    visibility: hidden;
+}
