--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,8 @@ section.notebooks, section.notes {
   margin-top: 20px;
 }
 
+/* TODO: This causes our lowest resolution hamburger menu to be hidden when
+we're at the bottom of the page. Find a fix for this */
 .trashcan.main-content, .preview-note-content, .notes-index {
   display:block;
   overflow:auto;
@@ -547,4 +549,8 @@ li.tag-selected {
 
 .dropdown-menu.tags-dropdown-hamburger-container.show > li:hover {
   background-color: initial !important;
+}
+
+.hamburger-menu-tag-element {
+  cursor: pointer;
 }
