Add trashcan link to hamburger menu

--- a/src/index.css
+++ b/src/index.css
@@ -583,3 +583,7 @@ input.new-notebook-hamburger:focus {
   background-color: transparent;
   color: initial;
 }
+
+a.hamburger-menu-link {
+  text-decoration: none !important;
+}
