Keep track of selected tags on resize
This change synchronizes selected tag(s) on each sidebar version for a different resolution, so that selected tag state is the same on each sidebar.

--- a/src/index.css
+++ b/src/index.css
@@ -641,7 +641,8 @@ div.new-notebook-sidebar-md {
   padding-top: 13px;
 }
 
-ul.new-notebook-sidebar-md > li {
+ul.new-notebook-sidebar-md > li,
+ul.tag-list-sidebar-md > li {
  cursor: pointer;
 }
 
