Add Notes dropdown to small sidebar on Notebook page

--- a/src/index.css
+++ b/src/index.css
@@ -683,3 +683,7 @@ a.sidebar-link-lg {
   display: block;
   width: inherit;
 }
+
+span.currently-opened-note-sidebar-sm {
+  border-bottom: 2px solid #6574a0;
+}
